--- a/Components/Pages/BiosConfig.razor
+++ b/Components/Pages/BiosConfig.razor
@@ -11,6 +11,7 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
 @inject HttpClient Http
+@inject PlatformToolsExtractor platformToolsExtractor
 @implements IDisposable
 
 <!-- ADB Command Window (only show in ADB mode) -->
@@ -627,7 +628,6 @@
     [Parameter] public string? Mode { get; set; }
 
     // ADB-related properties
-    private PlatformToolsExtractor? platformToolsExtractor;
     private AdbService? adbService;
     private AdbFileOperations? adbFileOps;
     private AdbDevice? selectedDevice;
@@ -698,8 +698,6 @@
         // Initialize ADB components if in ADB mode
         if (isAdbMode)
         {
-            platformToolsExtractor = new PlatformToolsExtractor();
-
             if (platformToolsExtractor.IsAdbAvailable())
             {
                 adbService = new AdbService(platformToolsExtractor.AdbExecutablePath);
